[package]
name = "cli"
version = "0.1.0"
edition = "2021"
default-run = "cli"
description = "Command line interface to the ASN.1-rs parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1 = { path = "../asn1" }
ada = { path = "../ada" }
clap = { version = "4.5.1", features = ["derive", "unicode", "wrap_help"] }

# need byte indexing, not published to crates.io yet
ariadne = { git = "https://github.com/zesterer/ariadne", rev = "a45d833", features = [
    "concolor",
] }
concolor-clap = "0.1.0"
